[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["fady17 <fady17@github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
pydantic = "^2.9.2"
aiohttp = "^3.10.5"
celery = "^5.4.0"
redis = "^5.0.8"
motor = "^3.6.0"
python-whois = "^0.9.4"
fastapi-limiter = "^0.1.6"
pymongo = "^4.9.1"
requests = "^2.32.3"
aioredis = "^2.0.1"
pydantic-settings = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
